--- a/Project.toml
+++ b/Project.toml
@@ -6,10 +6,14 @@ authors = ["sota <shimozono-sota631@g.ecc.u-tokyo.ac.jp>"]
 [deps]
 ITensorMPS = "0d1a4710-d33b-49a5-8f18-73bdf49b47e2"
 ITensors = "9136182c-28ba-11e9-034c-db9fb085ebd5"
+LaTeXStrings = "b964fa9f-0449-5b57-a5c2-d3ea65f4040f"
+TikzPictures = "37f6aa50-8035-52d0-81c2-5a1d08754b2d"
 
 [compat]
 ITensorMPS = "0.3.26"
 ITensors = "0.9.18"
+LaTeXStrings = "1.4.0"
+TikzPictures = "3.5.1"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
